--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Coming+Soon&family=Roboto:wght@300&display=swap');
 
-html { 
-  background-color: rgba(235, 235, 235, 0.383);
+html {
+  background-color: #F5FFFA;
+  /* Other colors I like: 
+    - #2D2D2D -> dark gray 
+    - #FEEBC8 -> pastel yellow
+    - #F5F5F5 -> mid grey
+    - #F5FFFA -> kinda bluish, blends naturally
+  */
   font-family: 'Coming Soon', cursive;
   font-family: 'Roboto', sans-serif;
 }
+
 .card {
   position: absolute;
   transition: transform 0.5s;
   width: 93%;
   z-index: 0;
-  height: 80vh;
-  box-shadow: 5px 15px 5px rgba(0, 0, 0, 0.102);
-  filter: url(#roughpaper);
+  height: 85vh;
+  background-color: #F5F5F5; /* A soft, light gray color. */
+  border-radius: 10px; /* Rounded corners. */
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); /* A subtle shadow for a 3D effect. */
 }
 
 .card.next {
@@ -32,19 +40,26 @@ html {
 }
 
 .card-description { 
-  font-size: 12px;
+  font-size: 9px;
   color: gray;
   font-style: italic;
 }
 
 .card-image {
-  border: 0.5px solid gray;
-  border-radius: 4px;
+  max-width: 70%; /* Adjust as necessary. */
+  height: auto; /* Maintain the aspect ratio of the image. */
+  border-radius: 10px; /* Rounded corners for the image. */
 
 }
 
+.card-text-container {
+  text-align: center; /* Center the text. */
+}
+
+
 p.card-text { 
   font-size: 18px;
+  color: #666;
 }
 
 .date {
@@ -58,6 +73,14 @@ p.card-text {
 .card-body {
   display: flex;
   flex-direction: column;
+  align-items: center; /* Center the items vertically. */
+  justify-content: space-around;
+}
+
+.card-image-container {
+  width: 100%; /* Take the full width of the card. */
+  display: flex; /* This will help center the image. */
+  justify-content: center; /* Center the image horizontally. */
 }
 
 .conversation { 
@@ -93,6 +116,10 @@ p.card-text {
   font-size: 40px;
 }
 
+#map { 
+  max-width: 100% !important;
+}
+
 .right {
   background: lightgreen;
   align-self: flex-end;
@@ -107,7 +134,13 @@ p.card-text {
 }
 
 .card-title { 
-  color: rgb(61, 60, 60);
-  border-bottom: 2px solid gray;
+  color: #333; /* A dark gray color. */
+  font-size: 1.2em; /* A slightly larger font size. */
+  font-weight: bold; /* Make the title bold. */
   padding-bottom: 6px;
+}
+
+
+.whiteish { 
+  background-color: #FDFCFD;
 }
